Use advanced switch capabilities.