@@ -36,7 +36,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -592,7 +591,7 @@ final class ElemReader<T> extends XMLReader<T> {
 
 		final List<ReaderResult> results = _children.stream()
 			.map(ReaderResult::of)
-			.collect(Collectors.toList());
+			.toList();
 
 		final ReaderResult text = _textReaderIndex.length == 1
 			? results.get(_textReaderIndex[0])
@@ -611,10 +610,8 @@ final class ElemReader<T> extends XMLReader<T> {
 			boolean hasNext = false;
 			do {
 				switch (xml.getEventType()) {
-					case COMMENT:
-						consumeComment(xml);
-						break;
-					case START_ELEMENT:
+					case COMMENT -> consumeComment(xml);
+					case START_ELEMENT -> {
 						final String localName = xml.getLocalName();
 						Integer index = _readerIndexMapping.get(localName);
 
@@ -633,27 +630,23 @@ final class ElemReader<T> extends XMLReader<T> {
 							throwUnexpectedElement(xml, lenient, result);
 							hasNext = xml.safeNext();
 						}
-
-						break;
-					case CHARACTERS:
-					case CDATA:
+					}
+					case CHARACTERS, CDATA -> {
 						if (text != null) {
 							throwUnexpectedElement(xml, lenient, text);
 						} else {
 							xml.next();
 						}
 						hasNext = true;
-
-						break;
-					case END_ELEMENT:
-					case END_DOCUMENT:
+					}
+					case END_ELEMENT, END_DOCUMENT -> {
 						try {
 							return _creator.apply(
 								results.stream()
 									.map(ReaderResult::value)
 									.toArray()
 							);
-						} catch (IllegalArgumentException|NullPointerException e) {
+						} catch (IllegalArgumentException | NullPointerException e) {
 							if (!lenient) {
 								throw new XMLStreamException(format(
 									"Invalid value for '%s'.", name()), e
@@ -662,6 +655,7 @@ final class ElemReader<T> extends XMLReader<T> {
 								return null;
 							}
 						}
+					}
 				}
 
 			} while (hasNext);
@@ -797,8 +791,8 @@ final class ListResult implements ReaderResult {
 
 	@Override
 	public void put(final Object value) {
-		if (value instanceof List<?>) {
-			_value.addAll((List<?>)value);
+		if (value instanceof List<?> list) {
+			_value.addAll(list);
 		} else {
 			_value.add(value);
 		}
